cleanup theme-starter

--- a/content/2.components.md
+++ b/content/2.components.md
@@ -12,7 +12,7 @@ embed-tag: demo
 hero-style: left
 ---
 
-# <span>Tool<span style="color:#84CC16">box</span></span>
+# <span>Components-<span style="color:#84CC16">Demo</span></span>
 ### <span class="text-xl text-primary font-bold">mit Templates ratzfatz in's Web</span>
 
 - auf Theaterpädagogik spezialisiert: Kurs, Workshop, Projekt<br>
