--- a/content/2.components.md
+++ b/content/2.components.md
@@ -1,9 +1,8 @@
 ---
-navigation.title: 'Toolbox'
+navigation.title: 'Components'
 layout: 'default'
+title: 'die Crearis-Components'
 # Custom og:image
-head.description: 'This is a custom description for Content Wind about page.'
-head.image: 'https://i.picsum.photos/id/866/536/354.jpg?hmac=tGofDTV7tl2rprappPzKFiZ9vDh5MKj39oa2D--gqhA'
 ---
 
 ::media-hero
